<resources>
    <string name="app_name">Covid-19 Tracker</string>
    <string name="title_world">World</string>
    <string name="title_country">Country</string>
    <string name="title_notifications">Notifications</string>
    <string name="coronavirus_covid_19_n_global_cases">Coronavirus COVID-19 \n Global Cases</string>
    <string name="total_confirmed">Total confirmed</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="total_recovered">Total Recovered</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="developed_by">Developed by :  </string>
    <string name="abu_raihan_rony"><a href="https://facebook.com/ronyaburaihan/">Abu Raihan Rony</a></string>
    <string name="today_confirmed">Today confirmed :</string>
    <string name="today_deaths">Today deaths :</string>
    <string name="total_confirmed_d">Total confirmed :</string>
    <string name="total_deaths_d">Total deaths :</string>
    <string name="total_recovered_d">Total recovered :</string>
    <string name="active">Active :</string>
    <string name="critical">Critical :</string>
    <string name="cases_per_million">Cases per million :</string>
    <string name="search">Search</string>
    <string name="search_by_country">Search by country</string>
    <string name="total_tests">Total tests :</string>
    <string name="test_per_million">Test per million :</string>
</resources>
