<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_layout_world"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.world.WorldFragment">

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/internet_connection_status_world"
            android:text="@string/no_internet_connection"
            android:background="@color/red"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:padding="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/sync_time_world"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/internet_connection_status_world"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textColor="@color/text_color_light"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_world"
            app:cardElevation="5dp"
            app:cardCornerRadius="18dp"
            android:layout_centerInParent="true"
            app:cardBackgroundColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:padding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/text_color_dark"
                    android:text="@string/coronavirus_covid_19_n_global_cases"
                    android:textSize="24sp"
                    android:fontFamily="@font/poppins_bold" />

                <TextView
                    android:textAlignment="center"
                    android:text="@string/total_confirmed"
                    style="@style/LabelFontStyle"
                    android:textColor="@color/text_color_light"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/total_confirmed"
                    style="@style/TotalFontStyle"
                    android:textColor="@color/yellow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textAlignment="center"
                    android:text="@string/total_deaths"
                    style="@style/LabelFontStyle"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/text_color_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/total_deaths"
                    style="@style/TotalFontStyle"
                    android:textColor="@color/red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textAlignment="center"
                    android:text="@string/total_recovered"
                    style="@style/LabelFontStyle"
                    android:textColor="@color/text_color_light"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/total_recovered"
                    android:textColor="@color/green"
                    style="@style/TotalFontStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/developed_by"
                android:textSize="14sp"
                android:fontFamily="@font/poppins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/developer_name_world"
                android:text="@string/abu_raihan_rony"
                android:textSize="14sp"
                android:layout_margin="5dp"
                android:linksClickable="true"
                android:autoLink="web"
                android:textColorLink="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>