<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="18dp"
    app:cardElevation="5dp"
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:padding="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/country_name_dialog"
            android:textAlignment="center"
            android:textColor="@color/text_color_dark"
            style="@style/TotalFontStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/today_confirmed"
                style="@style/LabelFontStyle"
                android:fontFamily="@font/poppins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/today_confirmed_dialog"
                android:layout_marginStart="5dp"
                style="@style/TotalFontStyle"
                android:textSize="20sp"
                android:textColor="@color/yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/today_deaths"
                style="@style/LabelFontStyle"
                android:fontFamily="@font/poppins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/today_deaths_dialog"
                android:layout_marginStart="5dp"
                style="@style/TotalFontStyle"
                android:textSize="20sp"
                android:textColor="@color/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <View
            android:layout_margin="8dp"
            android:background="@color/viewColor"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/total_confirmed_d"
                style="@style/LabelFontStyle"
                android:fontFamily="@font/poppins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/total_cases_dialog"
                android:layout_marginStart="5dp"
                style="@style/TotalFontStyle"
                android:textSize="20sp"
                android:textColor="@color/yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/total_deaths_d"
                style="@style/LabelFontStyle"
                android:fontFamily="@font/poppins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/total_deaths_dialog"
                android:layout_marginStart="5dp"
                style="@style/TotalFontStyle"
                android:textSize="20sp"
                android:textColor="@color/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/total_recovered_d"
                style="@style/LabelFontStyle"
                android:fontFamily="@font/poppins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/total_recovered_dialog"
                android:layout_marginStart="5dp"
                style="@style/TotalFontStyle"
                android:textSize="20sp"
                android:textColor="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/active"
                style="@style/LabelFontStyle"
                android:fontFamily="@font/poppins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/active_case_dialog"
                android:layout_marginStart="5dp"
                style="@style/TotalFontStyle"
                android:textSize="20sp"
                android:textColor="@color/yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/critical"
                style="@style/LabelFontStyle"
                android:fontFamily="@font/poppins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/critical_case_dialog"
                android:layout_marginStart="5dp"
                style="@style/TotalFontStyle"
                android:textSize="20sp"
                android:textColor="@color/yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/cases_per_million"
                style="@style/LabelFontStyle"
                android:fontFamily="@font/poppins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/case_per_million_dialog"
                android:layout_marginStart="5dp"
                style="@style/TotalFontStyle"
                android:textSize="20sp"
                android:textColor="@color/yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/total_tests"
                style="@style/LabelFontStyle"
                android:fontFamily="@font/poppins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/total_test_dialog"
                android:layout_marginStart="5dp"
                style="@style/TotalFontStyle"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/test_per_million"
                style="@style/LabelFontStyle"
                android:fontFamily="@font/poppins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/test_per_million_dialog"
                android:layout_marginStart="5dp"
                style="@style/TotalFontStyle"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>